--- a/intro-neural-networks/gradient-descent/GradientDescent.ipynb
+++ b/intro-neural-networks/gradient-descent/GradientDescent.ipynb
@@ -11,10 +11,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -47,7 +45,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -85,29 +86,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Implement the following functions\n",
     "\n",
     "# Activation (sigmoid) function\n",
     "def sigmoid(x):\n",
-    "    pass\n",
+    "    return 1/(1 + np.exp(-x))\n",
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + np.exp(-x))\n",
     "\n",
     "# Output (prediction) formula\n",
     "def output_formula(features, weights, bias):\n",
-    "    pass\n",
+    "    return sigmoid(np.dot(features,weights)+bias)\n",
     "\n",
     "# Error (log-loss) formula\n",
     "def error_formula(y, output):\n",
-    "    pass\n",
+    "    return -np.dot(y,np.log(output))-np.dot(1-y,np.log(1-output))\n",
     "\n",
     "# Gradient descent step\n",
     "def update_weights(x, y, weights, bias, learnrate):\n",
-    "    pass"
+    "    output = output_formula(x, weights, bias)\n",
+    "    d_error = y - output\n",
+    "    weights += learnrate*d_error*x\n",
+    "    bias += learnrate*d_error\n",
+    "    return weights, bias"
    ]
   },
   {
@@ -122,7 +127,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -194,7 +202,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -204,7 +215,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -218,9 +229,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
