--- a/intro-to-pytorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
+++ b/intro-to-pytorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,11 +119,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.1595]])\n"
+     ]
+    }
+   ],
    "source": [
-    "## Calculate the output of this network using the weights and bias tensors"
+    "## Calculate the output of this network using the weights and bias tensors\n",
+    "y = activation(torch.sum(features*weights) + bias)\n",
+    "print(y)"
    ]
   },
   {
@@ -162,11 +172,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.1595]])\n"
+     ]
+    }
+   ],
    "source": [
-    "## Calculate the output of this network using matrix multiplication"
+    "## Calculate the output of this network using matrix multiplication\n",
+    "y = activation(torch.mm(features,weights.view(5,1)) + bias)\n",
+    "print(y)"
    ]
   },
   {
@@ -204,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,11 +258,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.3171]])\n"
+     ]
+    }
+   ],
    "source": [
-    "## Your solution here"
+    "h = activation(torch.mm(features,W1)+B1) # hidden layer\n",
+    "output = activation(torch.mm(h,W2)+B2)\n",
+    "print(output)"
    ]
   },
   {
@@ -265,9 +295,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.8682829 , 0.40272325, 0.55682228],\n",
+       "       [0.36619946, 0.7301563 , 0.19960941],\n",
+       "       [0.62490635, 0.38957007, 0.03775028],\n",
+       "       [0.52873263, 0.28657541, 0.63168596]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "a = np.random.rand(4,3)\n",
@@ -276,9 +320,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.8683, 0.4027, 0.5568],\n",
+       "        [0.3662, 0.7302, 0.1996],\n",
+       "        [0.6249, 0.3896, 0.0378],\n",
+       "        [0.5287, 0.2866, 0.6317]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "b = torch.from_numpy(a)\n",
     "b"
@@ -286,9 +344,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.8682829 , 0.40272325, 0.55682228],\n",
+       "       [0.36619946, 0.7301563 , 0.19960941],\n",
+       "       [0.62490635, 0.38957007, 0.03775028],\n",
+       "       [0.52873263, 0.28657541, 0.63168596]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "b.numpy()"
    ]
@@ -302,9 +374,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.7366, 0.8054, 1.1136],\n",
+       "        [0.7324, 1.4603, 0.3992],\n",
+       "        [1.2498, 0.7791, 0.0755],\n",
+       "        [1.0575, 0.5732, 1.2634]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Multiply PyTorch Tensor by 2, in place\n",
     "b.mul_(2)"
@@ -312,9 +398,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.7365658 , 0.80544649, 1.11364457],\n",
+       "       [0.73239892, 1.46031259, 0.39921882],\n",
+       "       [1.2498127 , 0.77914013, 0.07550056],\n",
+       "       [1.05746525, 0.57315082, 1.26337192]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Numpy array matches new values from Tensor\n",
     "a"
@@ -337,9 +437,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
