--- a/intro-to-pytorch/Part 3 - Training Neural Networks (Exercises).ipynb
+++ b/intro-to-pytorch/Part 3 - Training Neural Networks (Exercises).ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,9 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(2.3115, grad_fn=<NllLossBackward>)\n"
+     ]
+    }
+   ],
    "source": [
     "# Build a feed-forward network\n",
     "model = nn.Sequential(nn.Linear(784, 128),\n",
@@ -141,15 +149,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(2.3073, grad_fn=<NllLossBackward>)\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Build a feed-forward network\n",
-    "model = \n",
+    "model = nn.Sequential(nn.Linear(784,128),\n",
+    "                      nn.ReLU(),\n",
+    "                      nn.Linear(128,64),\n",
+    "                      nn.ReLU(),\n",
+    "                      nn.Linear(64,10),\n",
+    "                      nn.LogSoftmax(dim=1)\n",
+    "                     )\n",
     "\n",
     "# TODO: Define the loss\n",
-    "criterion = \n",
+    "criterion = nn.NLLLoss()\n",
     "\n",
     "### Run this to check your work\n",
     "# Get our data\n",
@@ -189,9 +211,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.5664, -0.4970],\n",
+      "        [ 0.1172,  0.3125]], requires_grad=True)\n"
+     ]
+    }
+   ],
    "source": [
     "x = torch.randn(2,2, requires_grad=True)\n",
     "print(x)"
@@ -199,9 +230,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.3208, 0.2470],\n",
+      "        [0.0137, 0.0976]], grad_fn=<PowBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "y = x**2\n",
     "print(y)"
@@ -216,9 +256,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<PowBackward0 object at 0x7ff03c675470>\n"
+     ]
+    }
+   ],
    "source": [
     "## grad_fn shows the function that generated this variable\n",
     "print(y.grad_fn)"
@@ -233,9 +281,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.1698, grad_fn=<MeanBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "z = y.mean()\n",
     "print(z)"
@@ -250,9 +306,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "print(x.grad)"
    ]
@@ -270,9 +334,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.2832, -0.2485],\n",
+      "        [ 0.0586,  0.1562]])\n",
+      "tensor([[-0.2832, -0.2485],\n",
+      "        [ 0.0586,  0.1562]], grad_fn=<DivBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "z.backward()\n",
     "print(x.grad)\n",
@@ -297,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,9 +394,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before backward pass: \n",
+      " None\n",
+      "After backward pass: \n",
+      " tensor([[-1.7744e-03, -1.7744e-03, -1.7744e-03,  ..., -1.7744e-03,\n",
+      "         -1.7744e-03, -1.7744e-03],\n",
+      "        [ 1.2703e-05,  1.2703e-05,  1.2703e-05,  ...,  1.2703e-05,\n",
+      "          1.2703e-05,  1.2703e-05],\n",
+      "        [-4.8581e-04, -4.8581e-04, -4.8581e-04,  ..., -4.8581e-04,\n",
+      "         -4.8581e-04, -4.8581e-04],\n",
+      "        ...,\n",
+      "        [-2.1883e-03, -2.1883e-03, -2.1883e-03,  ..., -2.1883e-03,\n",
+      "         -2.1883e-03, -2.1883e-03],\n",
+      "        [ 3.8074e-03,  3.8074e-03,  3.8074e-03,  ...,  3.8074e-03,\n",
+      "          3.8074e-03,  3.8074e-03],\n",
+      "        [-7.3067e-04, -7.3067e-04, -7.3067e-04,  ..., -7.3067e-04,\n",
+      "         -7.3067e-04, -7.3067e-04]])\n"
+     ]
+    }
+   ],
    "source": [
     "print('Before backward pass: \\n', model[0].weight.grad)\n",
     "\n",
@@ -341,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,9 +465,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial weights -  Parameter containing:\n",
+      "tensor([[-1.7110e-05,  5.4955e-03,  1.6528e-02,  ..., -7.1096e-04,\n",
+      "          2.8897e-02,  2.3018e-02],\n",
+      "        [-1.2252e-02, -2.6889e-02, -5.3582e-03,  ..., -1.8667e-02,\n",
+      "          1.9873e-02, -9.6247e-03],\n",
+      "        [ 3.1395e-02, -3.1653e-03,  2.2715e-02,  ...,  2.8921e-02,\n",
+      "         -3.5652e-02,  3.0372e-02],\n",
+      "        ...,\n",
+      "        [ 1.0408e-02, -6.2999e-03,  3.1689e-02,  ...,  2.5824e-02,\n",
+      "         -2.3907e-03, -1.2126e-02],\n",
+      "        [-4.3860e-03,  9.2293e-03, -3.2556e-02,  ..., -6.6530e-03,\n",
+      "         -2.7921e-02,  6.6935e-04],\n",
+      "        [ 8.8110e-03,  1.9002e-02,  1.2881e-02,  ..., -2.1647e-02,\n",
+      "          2.4600e-02,  1.2491e-02]], requires_grad=True)\n",
+      "Gradient - tensor([[-0.0011, -0.0011, -0.0011,  ..., -0.0011, -0.0011, -0.0011],\n",
+      "        [ 0.0019,  0.0019,  0.0019,  ...,  0.0019,  0.0019,  0.0019],\n",
+      "        [ 0.0003,  0.0003,  0.0003,  ...,  0.0003,  0.0003,  0.0003],\n",
+      "        ...,\n",
+      "        [-0.0046, -0.0046, -0.0046,  ..., -0.0046, -0.0046, -0.0046],\n",
+      "        [ 0.0007,  0.0007,  0.0007,  ...,  0.0007,  0.0007,  0.0007],\n",
+      "        [ 0.0006,  0.0006,  0.0006,  ...,  0.0006,  0.0006,  0.0006]])\n"
+     ]
+    }
+   ],
    "source": [
     "print('Initial weights - ', model[0].weight)\n",
     "\n",
@@ -388,9 +514,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated weights -  Parameter containing:\n",
+      "tensor([[-6.4266e-06,  5.5062e-03,  1.6539e-02,  ..., -7.0028e-04,\n",
+      "          2.8908e-02,  2.3028e-02],\n",
+      "        [-1.2271e-02, -2.6908e-02, -5.3772e-03,  ..., -1.8686e-02,\n",
+      "          1.9854e-02, -9.6437e-03],\n",
+      "        [ 3.1393e-02, -3.1681e-03,  2.2712e-02,  ...,  2.8918e-02,\n",
+      "         -3.5655e-02,  3.0369e-02],\n",
+      "        ...,\n",
+      "        [ 1.0454e-02, -6.2539e-03,  3.1735e-02,  ...,  2.5870e-02,\n",
+      "         -2.3447e-03, -1.2080e-02],\n",
+      "        [-4.3934e-03,  9.2219e-03, -3.2563e-02,  ..., -6.6604e-03,\n",
+      "         -2.7928e-02,  6.6198e-04],\n",
+      "        [ 8.8049e-03,  1.8996e-02,  1.2874e-02,  ..., -2.1653e-02,\n",
+      "          2.4594e-02,  1.2485e-02]], requires_grad=True)\n"
+     ]
+    }
+   ],
    "source": [
     "# Take an update step and few the new weights\n",
     "optimizer.step()\n",
@@ -434,8 +581,14 @@
     "        images = images.view(images.shape[0], -1)\n",
     "    \n",
     "        # TODO: Training pass\n",
-    "        \n",
-    "        loss = \n",
+    "        # Clear the gradients, do this because gradients are accumulated\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        # Forward pass, then backward pass, then update weights\n",
+    "        output = model(images)\n",
+    "        loss = criterion(output, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step() \n",
     "        \n",
     "        running_loss += loss.item()\n",
     "    else:\n",
@@ -494,9 +647,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
